--- a/.github/workflows/tf-deploy.yaml
+++ b/.github/workflows/tf-deploy.yaml
@@ -52,5 +52,5 @@ jobs: #consists of steps
     - name: apply terraform
       id: apply
       # if: github.ref == 'refs/heads/main' #if the main branch applys then apply or else do not apply
-      run: terraform apply
+      run: terraform apply -auto-approve
       working-directory: eks-modules
